syntax = "proto3";

package activity;

service ActivitySrv{
    rpc Publish(PubReq) returns (PubResp){}
    //rpc Modify(MdfReq) returns (MdfResp){}
    rpc Delete(DltReq) returns (DltResp){}
    rpc Query(QryReq) returns (QryResp){}
}

message PubReq{
   //int32 actid = 1;
   string type = 2;
   string createTime = 3;
   string endTime = 4;
   string title = 5;
   string description = 6;
   repeated string tag = 7;
}
message PubResp{
    int32 status = 1;
    string description = 2;
    int32 actid = 3;
}
/*
message MdfReq{}
message MdfResp{}
*/
message DltReq{
    int32 actid = 1;
}
message DltResp{
    int32 status = 1;
    string description = 2;
}

message QryReq{
    int32 actid = 1;
}
message QryResp{
    string type = 2;
    string createTime = 3;
    string endTime = 4;
    string title = 5;
    string description = 6;
    repeated string tag = 7;
}
